<resources>
    <string name="app_name">First Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Drawer Open</string>
    <string name="close_nav">Drawer Close</string>
    <!-- COFFEE SHOP   -->
    <string name="started_page_h1_coffee">Fall in Love with Coffee in Blissful Delight!</string>
    <string name="started_page_des_coffee">Welcome to our majapa coffee corner, where every cup is a delightful for you.</string>
    <string name="title_activity_in_built_bottom_nav">InBuiltBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shortlists">Shortlists</string>
    <string name="home">Home</string>
    <string name="listing">Listing</string>
    <string name="profile">Profile</string>
    <string name="property_name_hint">Building/Apartment/Society Name</string>
    <string name="property_des_hint">Describe Property Description</string>
    <string name="property_details">Property Details</string>
    <string name="property_type">Type *</string>
    <string name="bhk">BHK *</string>
    <string name="furnishing_type">Furnishing Type</string>
    <string name="pricing_details">Pricing Details</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="fully_furnished">Fully Furnished</string>
    <string name="semi_furnished">Semi Furnished</string>
    <string name="un_furnished">UnFurnished</string>
    <string name="monthly_maintenance">Monthly Maintenance</string>
    <string name="location_details">Location Details</string>
    <string name="my_widget_1">My Widget 1</string>
    <string name="widget_with_todos">Widget with todos</string>
    <string name="legacy_widget_example_1">legacy_widget_example_1</string>
    <string name="city">City</string>
    <string name="locality">Locality</string>
    <string name="toggle_fav">toggle fav</string>
    <string name="news_app">NewsApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="textview">TextView</string>
    <string name="click_to_create">Click to create</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="upload_image">Upload Image</string>
    <string name="image">Image</string>
    <string name="pincode">Pincode</string>
    <string name="street">Street</string>
    <string name="address">Address</string>
    <string name="phone_no">phone no</string>
    <string name="dial">Dial</string>
    <string name="option_1">Option 1</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="custom_reply_title">Custom reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_jcmain">JCActivity1</string>
    <string name="my_widget">My Widget</string>
    <string name="click_to_update">Click to update</string>
    <string name="title_activity_expandable_lists">ExpandableLists</string>
    <string name="show_less">show_less</string>
    <string name="show_more">show_more</string>
    <string name="title">Title</string>
    <string name="title_activity_reorderable_list_using_jc">ReorderableListUsingJC</string>
    <string name="title_activity_basic_state_codelab">BasicStateCodelabActivity</string>
    <string name="title_activity_jcperformance_killer">JCPerformanceKillerActivity</string>
    <string name="title_activity_observables">ObservablesActivity</string>
</resources>