<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:gravity="center"
    tools:context=".learn_room_db.ui.CreateOrEditFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginVertical="12dp" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary" />

        <ImageButton
            android:id="@+id/ibtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:visibility="gone"
            android:src="@drawable/outline_delete_24"
            app:tint="@color/red" />

    </LinearLayout>


    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="100"
        android:inputType="text"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <TextView
        android:id="@+id/tvTitleAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/address"
        android:textColor="@color/gray_medium" />

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/etPincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:ems="32"
        android:inputType="number"
        android:hint="@string/pincode" />

<!--    <TextView-->
<!--        android:id="@+id/tvTitleImage"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="4dp"-->
<!--        android:text="@string/image"-->
<!--        android:textColor="@color/gray_medium" />-->

<!--    <Button-->
<!--        android:id="@+id/btnUploadImage"-->
<!--        style="@style/Widget.Material3.Button.ElevatedButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/upload_image" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/save" />

</LinearLayout>
